-- candidate list -- mail sent during candidate signup

--- a/index.html
+++ b/index.html
@@ -1,402 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<section>
+    <div class="section-heading">
+        <h1 class="font-bold">Hi, {{firstName}} {{lastName}}</h1><br />
+        <h1 class="font-bold">Welcome to ReKonnect</h1>
+        <h5 class="text-color-light font-normal">We help you kickstart/restart your career</h5>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <!-- Google Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <style>
-        .header {
-            width: 100%;
-        }
-
-        .header-section {
-            /* background-image: url("https://drive.google.com/uc?export=view&id=19D7dNy8KROo95kInAS5BHIxX2Yu-Cc_J"); */
-            width: auto;
-            height: 250px;
-            webkit-background-size: contain;
-            -moz-background-size: contain;
-            -o-background-size: contain;
-            background-size: contain;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-
-        }
-
-        .btn-primary {
-            background-color: #15759A;
-            color: #fff !important;
-            border-color: #15759A;
-            width: 100%;
-            border-radius: 50px !important;
-        }
-
-        .btn {
-            display: inline-block;
-            font-weight: 400;
-            text-align: center;
-            white-space: nowrap;
-            vertical-align: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            border: 1px solid transparent;
-            padding: .375rem .75rem;
-            font-size: 1rem;
-            line-height: 1.5;
-            border-radius: .25rem;
-            transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-        }
-
-        .mt-16 {
-            margin-top: 16px;
-        }
-
-        .border-top {
-            border-top: 1px solid #dee2e6 !important;
-        }
-
-        .row {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-            margin-right: -15px;
-            margin-left: -15px;
-        }
-
-        .col-md-6 {
-            -ms-flex: 0 0 50%;
-            flex: 0 0 50%;
-            max-width: 50%;
-        }
-
-        .col,
-        .col-1,
-        .col-10,
-        .col-11,
-        .col-12,
-        .col-2,
-        .col-3,
-        .col-4,
-        .col-5,
-        .col-6,
-        .col-7,
-        .col-8,
-        .col-9,
-        .col-auto,
-        .col-lg,
-        .col-lg-1,
-        .col-lg-10,
-        .col-lg-11,
-        .col-lg-12,
-        .col-lg-2,
-        .col-lg-3,
-        .col-lg-4,
-        .col-lg-5,
-        .col-lg-6,
-        .col-lg-7,
-        .col-lg-8,
-        .col-lg-9,
-        .col-lg-auto,
-        .col-md,
-        .col-md-1,
-        .col-md-10,
-        .col-md-11,
-        .col-md-12,
-        .col-md-2,
-        .col-md-3,
-        .col-md-4,
-        .col-md-5,
-        .col-md-6,
-        .col-md-7,
-        .col-md-8,
-        .col-md-9,
-        .col-md-auto,
-        .col-sm,
-        .col-sm-1,
-        .col-sm-10,
-        .col-sm-11,
-        .col-sm-12,
-        .col-sm-2,
-        .col-sm-3,
-        .col-sm-4,
-        .col-sm-5,
-        .col-sm-6,
-        .col-sm-7,
-        .col-sm-8,
-        .col-sm-9,
-        .col-sm-auto,
-        .col-xl,
-        .col-xl-1,
-        .col-xl-10,
-        .col-xl-11,
-        .col-xl-12,
-        .col-xl-2,
-        .col-xl-3,
-        .col-xl-4,
-        .col-xl-5,
-        .col-xl-6,
-        .col-xl-7,
-        .col-xl-8,
-        .col-xl-9,
-        .col-xl-auto {
-            /* position: relative; */
-            /* width: 100%; */
-            min-height: 1px;
-            padding-right: 15px;
-            padding-left: 15px;
-        }
-
-        .card {
-            position: relative;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-direction: column;
-            flex-direction: column;
-            min-width: 0;
-            word-wrap: break-word;
-            /* background-color: #fff; */
-            background-clip: border-box;
-            /* border: 1px solid rgba(0, 0, 0, .125); */
-            border-radius: .25rem;
-        }
-
-        .card-body {
-            -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-            padding: 1.25rem;
-        }
-
-        @media (max-width: 576px) {
-            .header-section {
-                height: 96px;
-                background-repeat: no-repeat;
-            }
-        }
-
-        .header-section .rekonnect-logo {
-            height: 90px;
-            width: 90px;
-            display: block;
-        }
-
-        @media (max-width: 576px) {
-            .header-section .rekonnect-logo {
-                height: 24px;
-                width: 24px;
-            }
-        }
-
-        h5 {
-            color: #0071A9;
-            font-weight: 700;
-            margin-top: 16px;
-        }
-
-        .section-content {
-            color: #3E3E3E;
-        }
-
-        .section-padding {
-            padding: 0px 64px;
-        }
-
-        @media (max-width: 576px) {
-            .section-padding {
-                padding: 0px 32px;
-            }
-        }
-
-        .section-short-padding {
-            padding: 0 24px;
-        }
-
-        .mt-16 {
-            margin-top: 16px;
-        }
-
-        .mt-30 {
-            margin-top: 30px;
-        }
-
-        .mb-30 {
-            margin-bottom: 30px;
-        }
-
-        .btn .btn-primary {
-            background-color: #15759A;
-            color: #fff;
-            border-color: #15759A;
-            width: 100%;
-            border-radius: 50px;
-        }
-
-        .padding {
-            padding: 0 75px;
-        }
-
-        .img-fluid {
-            max-width: 100%;
-            height: auto;
-        }
-
-        img {
-            vertical-align: middle;
-            border-style: none;
-        }
-
-        @media (max-width: 576px) {
-            .padding {
-                padding: 0px 32px;
-            }
-        }
-
-        .section-content-card {
-            margin-top: 40px;
-            background-image: url("https://drive.google.com/uc?export=view&id=1PQ3g2lXjjTBGpWTOmxMiWq3altNPUXXG");
-            width: auto;
-            height: 450px;
-            webkit-background-size: contain;
-            -moz-background-size: contain;
-            -o-background-size: contain;
-            background-size: contain;
-        }
-
-        @media (max-width: 576px) {
-            .section-content-card {
-                height: auto;
-                background-image: none;
-            }
-
-        }
-
-        .section-content-card .card {
-            border: none;
-            background: transparent;
-        }
-
-        .section-content-card .card img {
-            height: 250px;
-        }
-
-        .section-content-card .card .card-body {
-            padding-left: 0;
-            padding-right: 0;
-        }
-
-        .section-footer {
-            background: #3E3E3E;
-            color: #fff;
-            height: 300px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px;
-        }
-    </style>
-</head>
-
-<body>
-    <section>
-        <div class="header">
-            <div class="header-section"
-                style="background: url('https://drive.google.com/uc?export=view&id=19D7dNy8KROo95kInAS5BHIxX2Yu-Cc_J')">
-                <img class="rekonnect-logo"
-                    src="https://drive.google.com/uc?export=view&id=1XGA8O4pTU3M5aW8MH4de8GTWGnYYTpy5" />
-                <h5>Welcome Aboard!</h5>
-            </div>
-        </div>
-        <div class="section-content">
-            <p class="section-padding mt-16">
-                Dear <b>candidate name</b>
-            <p class="section-padding">
-                This is exciting: Welcome to ReKonnect! We are thrilled and excited to have you on our platform.
-                We built ReKonnect.in for everyone who wants to marry their passion into a profession & especially for
-                those of you who are immediately available and can't wait to get back to the workforce!
-            </p>
-            </p>
-
-            <p class="section-padding mt-30">
-            <h5 class="section-padding mt-30">Wondering how we do this?</h5>
-            <p class="section-padding mt-24">
-                ReKonnect offers jobs that are tailor-made to your skills & interests, access to some of the best
-                industry experts, and an opportunity to upgrade your skills... all on one single platform!
-                We are here to make sure you get the result you expect from ReKonnect, so don't hesitate to email us at
-                <a href="mailto:reachus@rekonnect.in">reachus@rekonnect.in</a>, if you have any questions
-            </p>
-            <p class="section-padding">We cannot wait for you to kickstart your career towards success!!</p>
-            </p>
-            <p class="section-padding mt-30">
-            <p class="section-padding">Cheers!</p>
-            <p class="section-padding">Team ReKonnect</p>
-            <p class="section-padding"><a href="https://rekonnect.in">https://rekonnect.in</a></p>
-            </p>
-        </div>
-        <div class="section-content border-top mt-16">
-            <div class="row section-content-card padding ">
-                <div class="col-sm col-md-6 col-sm-12">
-                    <div class="card">
-                        <img class="img-fluid"
-                            src="https://drive.google.com/uc?export=view&id=1GzDPUGA223m7C5u-CMKQJTUyq4G7AbgM" />
-                        <div class="card-body">
-                            <h4 class="card-title text-center">You've got a dream and we help you get there</h4>
-                            <a href="#" class="btn btn-primary mt-16">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm col-md-6 col-sm-12">
-                    <div class="card">
-                        <img class="img-fluid" src="./assets/images/webinar.jpg" />
-                        <div class="card-body">
-                            <h4 class="card-title text-center"> We hold webinars more often than you think</h4>
-                            <a href="#" class="btn btn-primary mt-16">Check out upcoming webinars</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-footer section-padding mt-24">
-            <p>You are receiving this email because you are a registered member of ReKonnect </p>
-            <p>© 2021 ReKonnect B 19/20 green acres, Salunkhe Vihar road, Kondhwa, Pune 41104</p>
-            <div><img src="https://drive.google.com/uc?export=view&id=11l0PtTPEPgijZ-DkRf4uDdzvCBuKqFfl" /><strong
-                    class="section-short-padding">Product of Inventiway</strong></div>
-            <div class="mt-30 mb-30">
-                <img class="footer-socials"
-                    src="https://drive.google.com/uc?export=view&id=1an5TSVS9zvXJTYHnb4-m3UFQh4xdVe7j" />
-                <img class="footer-socials" src="./assets/images/twitter-logo.svg" />
-                <img class="footer-socials" src="./assets/images/linkedin-logo.svg" />
-                <img class="footer-socials" src="./assets/images/whatsapp-logo.svg">
-            </div>
-        </div>
-    </section>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-</body>
+    <div class="section-heading">
+        <!-- <h1 class="font-bold">Welcome {{userData.first_name}} {{userData.last_name}} to ReKonnect</h1> -->
+        <h5 class="text-color-light font-normal">We will let you know once our portal is live</h5>
+    </div>
+</section>
