--- a/index.html
+++ b/index.html
@@ -1,12 +1,330 @@
-<section>
-    <div class="section-heading">
-        <h1 class="font-bold">Hi, {{firstName}} {{lastName}}</h1><br />
-        <h1 class="font-bold">Welcome to ReKonnect</h1>
-        <h5 class="text-color-light font-normal">We help you kickstart/restart your career</h5>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="section-heading">
-        <!-- <h1 class="font-bold">Welcome {{userData.first_name}} {{userData.last_name}} to ReKonnect</h1> -->
-        <h5 class="text-color-light font-normal">We will let you know once our portal is live</h5>
-    </div>
-</section>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title></title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <!-- Google Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+        @font-face {
+            font-family: "Inter", sans-serif;
+            src: url(https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap);
+        }
+
+        body {
+            font-family: "Inter", sans-serif;
+        }
+
+        .header {
+            width: 100%;
+        }
+
+        .header-section {
+            background-image: url(https://drive.google.com/uc?export=view&id=19D7dNy8KROo95kInAS5BHIxX2Yu-Cc_J);
+            width: auto;
+            height: 250px;
+            /* background-repeat: no-repeat; */
+            webkit-background-size: contain;
+            -moz-background-size: contain;
+            -o-background-size: contain;
+            background-size: contain;
+            /* display: flex; */
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+        }
+
+
+        /* @media (max-width: 576px) {
+            .header-section {
+                height: 96px;
+                background-repeat: no-repeat;
+            }
+        } */
+
+        .header-section .rekonnect-logo {
+            height: 90px;
+            width: 90px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        @media (max-width: 576px) {
+            .header-section .rekonnect-logo {
+                height: 24px;
+                width: 24px;
+            }
+        }
+
+        h5 {
+            color: #0071A9;
+            font-weight: 700;
+            margin-top: 16px;
+            font-size: 1.25rem;
+        }
+
+        .section-content {
+            color: #3E3E3E;
+        }
+
+        .section-padding {
+            padding: 0px 64px;
+        }
+
+        @media (max-width: 576px) {
+            .section-padding {
+                padding: 0px 32px;
+            }
+        }
+
+        .section-short-padding {
+            padding: 0 24px;
+        }
+
+        .mt-16 {
+            margin-top: 16px;
+        }
+
+        .mt-30 {
+            margin-top: 30px;
+        }
+
+        .mb-30 {
+            margin-bottom: 30px;
+        }
+
+        .btn.btn-primary {
+            background-color: #15759A;
+            color: #fff;
+            border-color: #15759A;
+            width: calc(100% - 48px);
+            border-radius: 50px;
+            display: inline-block;
+            font-weight: 400;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            border: 1px solid transparent;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            text-decoration: none;
+            transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+        }
+
+        @media (max-width: 576px) {
+            .btn.btn-primary {
+                font-size: 0.8rem;
+            }
+        }
+
+        .padding {
+            padding: 0 75px;
+        }
+
+        .row {
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            margin-right: -15px;
+            margin-left: -15px;
+            border-top: 1px solid #dee2e6 !important;
+        }
+
+        @media (max-width: 576px) {
+            .padding {
+                padding: 0px 32px;
+            }
+        }
+
+        .section-content-card {
+            margin-top: 40px;
+            background-image: url(https://drive.google.com/uc?export=view&id=1PQ3g2lXjjTBGpWTOmxMiWq3altNPUXXG);
+            width: auto;
+            height: auto;
+            webkit-background-size: contain;
+            -moz-background-size: contain;
+            -o-background-size: contain;
+            background-size: contain;
+
+            display: flex;
+            justify-content: center;
+        }
+
+        @media (max-width: 576px) {
+            .section-content-card {
+                height: auto;
+                background-image: none;
+            }
+        }
+
+        .section-content-card .card {
+            border: none;
+            background: transparent;
+            padding: 24px;
+        }
+
+        .section-content-card .card img {
+            width: 100%;
+            height: auto;
+        }
+
+        @media (max-width: 576px) {
+            .section-content-card .card img {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        /* .col-sm {
+            position: relative;
+            width: 100%;
+            min-height: 1px;
+            padding-right: 15px;
+            padding-left: 15px;
+        } */
+
+
+        /* @media (min-width: 768px) { */
+        .col-md-6 {
+            -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+
+        /* } */
+
+        /* @media (max-width: 576px) { */
+        .col-sm-12 {
+            -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+            max-width: 100%;
+            width: 100%;
+        }
+
+        /* } */
+
+
+        .section-content-card .card .card-body {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .section-footer {
+            background: #3e3e3e;
+            color: #fff;
+            height: 275px;
+            font-size: 14px;
+            text-align: center;
+            padding-top: 50px;
+        }
+    </style>
+</head>
+
+<body style="font-family: 'Inter', sans-serif;">
+    <section>
+        <div class="header">
+            <div class="header-section">
+                <!-- 1XGA8O4pTU3M5aW8MH4de8GTWGnYYTpy5 -->
+                <img class="rekonnect-logo"
+                    src="https://drive.google.com/uc?export=view&id=1XGA8O4pTU3M5aW8MH4de8GTWGnYYTpy5" />
+                <h5>Welcome Aboard!</h5>
+            </div>
+        </div>
+        <div class="section-content">
+            <p class="section-padding mt-16">
+                Dear <b>{{firstName}} {{lastName}}</b>
+            <p class="section-padding">
+                This is exciting: Welcome to ReKonnect! We are thrilled and excited to have you on our platform.
+                We built ReKonnect.in for everyone who wants to marry their passion into a profession & especially for
+                those of you who are immediately available and can't wait to get back to the workforce!
+            </p>
+            </p>
+
+            <p class="section-padding mt-30">
+            <h5 class="section-padding mt-30">Wondering how we do this?</h5>
+            <p class="section-padding mt-24">
+                ReKonnect offers jobs that are tailor-made to your skills & interests, access to some of the best
+                industry experts, and an opportunity to upgrade your skills... all on one single platform!
+                We are here to make sure you get the result you expect from ReKonnect, so don't hesitate to email us at
+                <a href="mailto:reachus@rekonnect.in">reachus@rekonnect.in</a>, if you have any questions
+            </p>
+            <p class="section-padding">We cannot wait for you to kickstart your career towards success!!</p>
+            </p>
+            <p class="section-padding mt-30">
+            <p class="section-padding">Cheers!</p>
+            <p class="section-padding">Team ReKonnect</p>
+            <p class="section-padding"><a href="https://rekonnect.in">https://rekonnect.in</a></p>
+            </p>
+        </div>
+        <div class="section-content border-top mt-16">
+            <div class="row section-content-card padding ">
+                <div class="col-sm col-md-6 col-sm-12">
+                    <div class="card">
+                        <img class="img-fluid"
+                            src="https://drive.google.com/uc?export=view&id=1GzDPUGA223m7C5u-CMKQJTUyq4G7AbgM" />
+                        <div class="card-body">
+                            <h4 class="card-title text-center">You've got a dream and we help you get there</h4>
+                            <a href="#" class="btn btn-primary mt-16">Visit Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm col-md-6 col-sm-12">
+                    <div class="card">
+                        <img class="img-fluid"
+                            src="https://drive.google.com/uc?export=view&id=1IIBO__aDaQ_Ww3p7ysZzTkGC0mJ9TSJe" />
+                        <div class="card-body">
+                            <h4 class="card-title text-center"> We hold webinars more often than you think</h4>
+                            <a href="#" class="btn btn-primary mt-16">Check out upcoming webinars</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-footer section-padding mt-24">
+            <p>You are receiving this email because you are a registered member of ReKonnect </p>
+            <p>© 2021 ReKonnect B 19/20 green acres, Salunkhe Vihar road, Kondhwa, Pune 41104</p>
+            <div><img src="https://drive.google.com/uc?export=view&id=11l0PtTPEPgijZ-DkRf4uDdzvCBuKqFfl" /><strong
+                    class="section-short-padding">Product of
+                    Inventiway</strong></div>
+            <div class="mt-30 mb-30">
+                <img class="footer-socials"
+                    src="https://drive.google.com/uc?export=view&id=1BHLpkQQoD3xZjy6OpP7W1w_OAV1pe3Ij" />
+                <img class="footer-socials"
+                    src="https://drive.google.com/uc?export=view&id=1V5-UBPQyu07hOrMfOIKxVrSQQzoHMXDa" />
+                <img class="footer-socials"
+                    src="https://drive.google.com/uc?export=view&id=1xP-cH6X_SMLYxulYp2NlF_rgwZzE08a_" />
+                <img class="footer-socials"
+                    src="https://drive.google.com/uc?export=view&id=1J_eXRYSiYxPjgsYcDaLbiP_n_lQ8tAkm">
+            </div>
+        </div>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+</body>
