--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 
         .section-padding {
             padding: 0px 64px;
+            margin-block-start: 10px;
+            margin-block-end: 10px;
         }
 
         @media (max-width: 576px) {
@@ -96,22 +98,23 @@
         }
 
         .mt-16 {
-            margin-top: 16px;
+            margin-top: 10px;
         }
 
         .mt-30 {
-            margin-top: 30px;
+            margin-top: 15px;
+            margin-bottom: 0px;
         }
 
         .mb-30 {
-            margin-bottom: 30px;
+            margin-bottom: 15px;
         }
 
         .btn.btn-primary {
             background-color: #15759A;
             color: #fff;
             border-color: #15759A;
-            width: calc(100% - 48px);
+            width: 50%;
             border-radius: 50px;
             display: inline-block;
             font-weight: 400;
@@ -156,7 +159,7 @@
         }
 
         .section-content-card {
-            margin-top: 40px;
+            /* margin-top: 40px; */
             background-image: url(https://drive.google.com/uc?export=view&id=1PQ3g2lXjjTBGpWTOmxMiWq3altNPUXXG);
             width: auto;
             height: auto;
@@ -183,7 +186,7 @@
         }
 
         .section-content-card .card img {
-            width: 100%;
+            width: 50%;
             height: auto;
         }
 
@@ -231,10 +234,10 @@
         .section-footer {
             background: #3e3e3e;
             color: #fff;
-            height: 275px;
+            height: 220px;
             font-size: 14px;
             text-align: center;
-            padding-top: 50px;
+            padding-top: 30px;
         }
     </style>
 </head>
@@ -259,7 +262,7 @@
             </p>
             </p>
 
-            <p class="section-padding mt-30">
+            <!-- <p class="section-padding mt-30"> -->
             <h5 class="section-padding mt-30">Wondering how we do this?</h5>
             <p class="section-padding mt-24">
                 ReKonnect offers jobs that are tailor-made to your skills & interests, access to some of the best
@@ -268,26 +271,27 @@
                 <a href="mailto:reachus@rekonnect.in">reachus@rekonnect.in</a>, if you have any questions
             </p>
             <p class="section-padding">We cannot wait for you to kickstart your career towards success!!</p>
-            </p>
-            <p class="section-padding mt-30">
+            <!-- </p> -->
+            <!-- <p class="section-padding mt-30"> -->
             <p class="section-padding">Cheers!</p>
             <p class="section-padding">Team ReKonnect</p>
             <p class="section-padding"><a href="https://rekonnect.in">https://rekonnect.in</a></p>
-            </p>
+            <!-- </p> -->
         </div>
         <div class="section-content border-top mt-16">
-            <div class="row section-content-card padding ">
+            <div class="row section-content-card padding " style="text-align:center">
                 <div class="col-sm col-md-6 col-sm-12">
                     <div class="card">
                         <img class="img-fluid"
                             src="https://drive.google.com/uc?export=view&id=1GzDPUGA223m7C5u-CMKQJTUyq4G7AbgM" />
                         <div class="card-body">
-                            <h4 class="card-title text-center">You've got a dream and we help you get there</h4>
-                            <a href="#" class="btn btn-primary mt-16">Visit Website</a>
+                            <h4 class="card-title text-center" style="margin-block-start: 10px;
+                            margin-block-end: 10px;">You've got a dream and we help you get there</h4>
+                            <a href="https://rekonnect.in" class="btn btn-primary" target="_blank">Visit Website</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm col-md-6 col-sm-12">
+                <!-- <div class="col-sm col-md-6 col-sm-12">
                     <div class="card">
                         <img class="img-fluid"
                             src="https://drive.google.com/uc?export=view&id=1IIBO__aDaQ_Ww3p7ysZzTkGC0mJ9TSJe" />
@@ -296,10 +300,10 @@
                             <a href="#" class="btn btn-primary mt-16">Check out upcoming webinars</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="section-footer section-padding mt-24">
+        <div class="section-footer mt-24">
             <p>You are receiving this email because you are a registered member of ReKonnect </p>
             <p>© 2021 ReKonnect B 19/20 green acres, Salunkhe Vihar road, Kondhwa, Pune 41104</p>
             <div><img src="https://drive.google.com/uc?export=view&id=11l0PtTPEPgijZ-DkRf4uDdzvCBuKqFfl" /><strong
