--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
         </div>
         <div class="section-footer mt-24">
             <p>You are receiving this email because you are a registered member of ReKonnect </p>
-            <p>© 2021 ReKonnect B 19/20 green acres, Salunkhe Vihar road, Kondhwa, Pune 41104</p>
+            <p>© 2021 ReKonnect</p>
+            <!-- <p>B 19/20 green acres, Salunkhe Vihar road, Kondhwa, Pune 41104</p> -->
             <div><img src="https://drive.google.com/uc?export=view&id=11l0PtTPEPgijZ-DkRf4uDdzvCBuKqFfl" /><strong
                     class="section-short-padding">Product of
                     Inventiway</strong></div>
