edited the mail body

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                 Dear <b>{{firstName}} {{lastName}}</b>
             <p class="section-padding">
                 This is exciting: Welcome to ReKonnect! We are thrilled and excited to have you on our platform.
-                We built ReKonnect.in for everyone who wants to marry their passion into a profession & especially for
-                those of you who are immediately available and can't wait to get back to the workforce!
+                We built ReKonnect.in for everyone who wants to follow a fulfilling career & especially for
+                those of you who are immediately available and join/rejoin the workforce!
             </p>
             </p>
 
